[gd_scene load_steps=3 format=2]

[ext_resource path="res://SpritesheetDataUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://App.gd" type="Script" id=2]

[node name="App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
margin_right = 356.0
margin_bottom = 600.0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 349.0
margin_bottom = 593.0
scroll_horizontal_enabled = false

[node name="SpritesheetsContainer" type="VBoxContainer" parent="HBoxContainer/PanelContainer/ScrollContainer"]
margin_right = 342.0
margin_bottom = 172.0

[node name="SpritesheetDataUI" parent="HBoxContainer/PanelContainer/ScrollContainer/SpritesheetsContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 342.0
margin_bottom = 148.0

[node name="AddNewImageButton" type="Button" parent="HBoxContainer/PanelContainer/ScrollContainer/SpritesheetsContainer"]
margin_top = 152.0
margin_right = 342.0
margin_bottom = 172.0
text = "Add new"

[node name="GeneratedCharacter" type="TextureRect" parent="HBoxContainer"]
margin_left = 360.0
margin_right = 360.0
margin_bottom = 600.0
stretch_mode = 6

[node name="GenerateButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.0
margin_top = -20.0
text = "Generate"

[connection signal="pressed" from="HBoxContainer/PanelContainer/ScrollContainer/SpritesheetsContainer/AddNewImageButton" to="." method="_on_AddNewImageButton_pressed"]
[connection signal="pressed" from="GenerateButton" to="." method="_on_GenerateButton_pressed"]
